# media

./: build.gradle  settings.gradle
media/: CMakeLists.txt  README.txt  build.gradle  proguard-rules.pro
media/src/androidTest/java/cn/embed/media/: ExampleInstrumentedTest.java
media/src/main/: AndroidManifest.xml
media/src/main/cpp/: CMakeLists.txt  comm.c  comm.h  native-lib.cpp  rtmp_sys.h  simplest_ffmpeg_streamer.c  sps_decode.c  sps_decode.h  stream_aac.c  stream_aac.h  stream_data.h  stream_h264.c  stream_h264.h
media/src/main/java/cn/embed/audio/: ABAudio.java  LiveAudio.java  RecorderAudio.java
media/src/main/java/cn/embed/base/: IAudio.java  IVideo.java
media/src/main/java/cn/embed/codec/: AudioEncoder.java  IVideoEncoder.java  LiveVideoEncoderCore.java  VideoEncoderCore.java
media/src/main/java/cn/embed/media/: Media.java
media/src/main/java/cn/embed/playmedia/: MediaPlayerWrapper.java  TextureViewPlayer.java  VideoInfo.java  VideoSurfaceView.java
media/src/main/java/cn/embed/renderer/: BaseRecorderer.java  CameraRecordRenderer.java  FilterManager.java  TextureTrans.java  VideoEditRenderer.java
media/src/main/java/cn/embed/utils/: Size.java  (+6 more)
media/src/main/res/raw/: cross_edit.acv  fragment_shader_2d_beauty.glsl  fragment_shader_2d_bilateral.glsl  fragment_shader_2d_gaussian_blue.glsl  fragment_shader_2d_lookup.glsl  fragment_shader_ext_bilateral.glsl  fragment_shader_ext_gray.glsl  fragment_shader_ext_lookup.glsl  fragment_shader_ext_pinchdistortion.glsl  fragment_shader_ext_surface_blur.glsl  vertex_shader_2d_two_input.glsl  vertex_shader_bilateral.glsl  vertex_shader_suerface_blur.glsl
(+72 files in other folders)
